modifed service ports

--- a/k8s/jellystat/service.yaml
+++ b/k8s/jellystat/service.yaml
@@ -10,3 +10,15 @@ spec:
   selector:
     app: jellystat
   type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: jellystat-db
+spec:
+  ports:
+  - port: 5432
+    targetPort: 5432
+  selector:
+    app: jellystat-db
+  type: ClusterIP
