--- a/k8s/jellystat/deployment.yaml
+++ b/k8s/jellystat/deployment.yaml
@@ -41,7 +41,7 @@ spec:
             - name: POSTGRES_PORT
               value: "5432"
             - name: POSTGRES_IP
-              value: "jellystat-db.prod.svc.cluster.local"
+              value: "jellystat-db"
             - name: JWT_SECRET
               value: "my-secret-jwt-key"
           volumeMounts:
