--- a/k8s/authentik/statefulset.yaml
+++ b/k8s/authentik/statefulset.yaml
@@ -41,19 +41,24 @@ spec:
       serviceAccountName: authentik-redis
       automountServiceAccountToken: true
       affinity:
-        podAffinity:
-          
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
-            - podAffinityTerm:
+            - weight: 100
+              podAffinityTerm:
                 labelSelector:
                   matchLabels:
-                    app.kubernetes.io/instance: authentik
-                    app.kubernetes.io/name: redis
-                    app.kubernetes.io/component: master
+                    app.kubernetes.io/name: "authentik"
+                    app.kubernetes.io/instance: "authentik"
+                    app.kubernetes.io/component: "server"
                 topologyKey: kubernetes.io/hostname
-              weight: 1
         nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: location
+                    operator: NotIn
+                    values:
+                      - local
           
       enableServiceLinks: true
       terminationGracePeriodSeconds: 30
@@ -188,19 +193,24 @@ spec:
       serviceAccountName: default
       
       affinity:
-        podAffinity:
-          
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
-            - podAffinityTerm:
+            - weight: 100
+              podAffinityTerm:
                 labelSelector:
                   matchLabels:
-                    app.kubernetes.io/instance: authentik
-                    app.kubernetes.io/name: postgresql
-                    app.kubernetes.io/component: primary
+                    app.kubernetes.io/name: "authentik"
+                    app.kubernetes.io/instance: "authentik"
+                    app.kubernetes.io/component: "server"
                 topologyKey: kubernetes.io/hostname
-              weight: 1
         nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: location
+                    operator: NotIn
+                    values:
+                      - local
           
       securityContext:
         fsGroup: 1001
