--- a/k8s/bookstack/statefulset.yaml
+++ b/k8s/bookstack/statefulset.yaml
@@ -17,6 +17,15 @@ spec:
       labels:
         app: mariadb
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: location
+                    operator: NotIn
+                    values:
+                      - local
       terminationGracePeriodSeconds: 30
       containers:
         - name: mariadb
