updated for new cluster, renamed to match namespace

--- a/k8s/cookbook-tandoor/ingress.yaml
+++ b/k8s/cookbook-tandoor/ingress.yaml
@@ -3,9 +3,8 @@ kind: Ingress
 metadata:
   name: cookbook
   namespace: cookbook
-  annotations:
-    kubernetes.io/ingress.className: traefik
 spec:
+  ingressClassName: nginx
   rules:
   - host: cookbook.local.koryalbert.net
     http:
