--- a/k8s/grafana/ingress.yaml
+++ b/k8s/grafana/ingress.yaml
@@ -2,9 +2,9 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: grafana
-  annotations:
-    kubernetes.io/ingress.className: traefik
+  namespace: grafana
 spec:
+  ingressClassName: nginx
   rules:
   - host: grafana.local.koryalbert.net
     http:
