--- a/k8s/grafana/service.yaml
+++ b/k8s/grafana/service.yaml
@@ -2,12 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: grafana
+  namespace: grafana
 spec:
   ports:
     - port: 3000
-      protocol: TCP
-      targetPort: http-grafana
+      targetPort: 3000
   selector:
     app: grafana
-  sessionAffinity: None
-  type: LoadBalancer
+  type: ClusterIP
