--- a/k8s/jellystat/ingress.yaml
+++ b/k8s/jellystat/ingress.yaml
@@ -2,14 +2,15 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: jellystat
+  namespace: jellystat
 spec:
+  ingressClassName: nginx
   rules:
     - host: jellystat.local.koryalbert.net
       http:
         paths:
           - path: /
             pathType: Prefix
-            # Redirect traffic to service on port 80
             backend:
               service:
                 name: jellystat
