--- a/k8s/jellystat/pvc.yaml
+++ b/k8s/jellystat/pvc.yaml
@@ -1,34 +1,13 @@
 apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: jellystat-data
-spec:
-  capacity:
-    storage: 1Gi
-  volumeMode: Filesystem
-  accessModes:
-  - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: local-path
-  local:
-    path: /mnt/k8s/jellystat
-  nodeAffinity:
-    required:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: kubernetes.io/os
-            operator: In
-            values:
-            - linux
----
-apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: jellystat-data-pvc
+  namespace: jellystat
 spec:
-  storageClassName: local-path
+  storageClassName: longhorn
+  volumeName: jellystat-data
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
