--- a/k8s/jellystat/service.yaml
+++ b/k8s/jellystat/service.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: jellystat
   name: jellystat
+  namespace: jellystat
 spec:
   ports:
     - port: 3000
@@ -15,6 +16,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jellystat-db
+  namespace: jellystat
 spec:
   ports:
   - port: 5432
