--- a/k8s/speedtest/deployment.yaml
+++ b/k8s/speedtest/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: speedtest-tracker
+  namespace: speedtest
 spec:
   replicas: 1
   selector:
