--- a/k8s/speedtest/ingress.yaml
+++ b/k8s/speedtest/ingress.yaml
@@ -2,7 +2,9 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: speedtest
+  namespace: speedtest
 spec:
+  ingressClassName: nginx
   rules:
   - host: speedtest.local.koryalbert.net
     http:
