--- a/k8s/speedtest/service.yaml
+++ b/k8s/speedtest/service.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: speedtest-tracker
   name: speedtest-tracker
+  namespace: speedtest
 spec:
   ports:
     - port: 80
@@ -15,6 +16,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
+  namespace: speedtest
 spec:
   ports:
     - port: 5432
