--- a/k8s/ghost/pvc.yaml
+++ b/k8s/ghost/pvc.yaml
@@ -1,59 +1,11 @@
 apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: ghost-app-data
-  namespace: ghost-dmz
-spec:
-  capacity:
-    storage: 100Mi
-  volumeMode: Filesystem
-  accessModes:
-  - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: local-path
-  local:
-    path: /mnt/k8s/ghost/app
-  nodeAffinity:
-    required:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: kubernetes.io/os
-            operator: In
-            values:
-            - linux
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: ghost-db-data
-  namespace: ghost-dmz
-spec:
-  capacity:
-    storage: 1Gi
-  volumeMode: Filesystem
-  accessModes:
-  - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: local-path
-  local:
-    path: /mnt/k8s/ghost/db
-  nodeAffinity:
-    required:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: kubernetes.io/os
-            operator: In
-            values:
-            - linux
----
-apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ghost-app-pvc
   namespace: ghost-dmz
 spec:
-  storageClassName: local-path
-  volumeName: ghost-app-data
+  storageClassName: longhorn
+  volumeName: ghost-app
   accessModes:
     - ReadWriteOnce
   resources:
@@ -66,10 +18,10 @@ metadata:
   name: ghost-db-pvc
   namespace: ghost-dmz
 spec:
-  storageClassName: local-path
-  volumeName: ghost-db-data
+  storageClassName: longhorn
+  volumeName: ghost-db
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 500Mi
