--- a/k8s/homepage/hpa.yaml
+++ b/k8s/homepage/hpa.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: homepage
-  namespace: prod
+  namespace: homepage
 spec:
   maxReplicas: 3
   metrics:
