--- a/k8s/homepage/service.yaml
+++ b/k8s/homepage/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
     name: homepage
-    namespace: prod
+    namespace: homepage
     labels:
         app.kubernetes.io/name: homepage
     annotations:
