--- a/k8s/uptime-kuma/pvc.yaml
+++ b/k8s/uptime-kuma/pvc.yaml
@@ -1,32 +1,11 @@
 apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: uptime-kuma-data
-spec:
-  capacity:
-    storage: 2Gi
-  volumeMode: Filesystem
-  accessModes:
-  - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: local-path
-  local:
-    path: /mnt/k8s/uptime-kuma
-  nodeAffinity:
-    required:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: kubernetes.io/os
-            operator: In
-            values:
-            - linux
----
-apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: uptime-kuma-data-pvc
+  namespace: uptime-kuma
 spec:
-  storageClassName: local-path
+  storageClassName: longhorn
+  volumeName: uptime-kuma-data
   accessModes:
     - ReadWriteOnce
   resources:
