--- a/k8s/nextcloud/deployment.yaml
+++ b/k8s/nextcloud/deployment.yaml
@@ -22,6 +22,7 @@ spec:
     spec:
       containers:
         - image: nextcloud:29.0.7-apache
+          imagePullPolicy: IfNotPresent
           name: nextcloud
           ports:
             - containerPort: 80
@@ -88,7 +89,8 @@ spec:
       volumes:
         - name: nextcloud-data
           persistentVolumeClaim:
-            claimName: nextcloud-pvc
+            claimName: nextcloud-app-pvc
         - name: nextcloud-storage
-          persistentVolumeClaim:
-            claimName: nextcloud-storage-pvc
+          nfs:
+            server: 192.168.2.252
+            path: "/mnt/tank/k8s/nextcloud/storage"
