--- a/k8s/nextcloud/pvc.yaml
+++ b/k8s/nextcloud/pvc.yaml
@@ -1,84 +1,13 @@
 apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: nextcloud-postgresql-data
-  namespace: "nextcloud-dmz"
-spec:
-  capacity:
-    storage: 2Gi
-  volumeMode: Filesystem
-  accessModes:
-  - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: local-path
-  local:
-    path: /mnt/k8s/nextcloud/postgres
-  nodeAffinity:
-    required:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: kubernetes.io/os
-            operator: In
-            values:
-            - linux
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: nextcloud-data
-  namespace: "nextcloud-dmz"
-spec:
-  capacity:
-    storage: 5Gi
-  volumeMode: Filesystem
-  accessModes:
-  - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: local-path
-  local:
-    path: /mnt/k8s/nextcloud/app
-  nodeAffinity:
-    required:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: kubernetes.io/os
-            operator: In
-            values:
-            - linux
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: nextcloud-storage
-  namespace: "nextcloud-dmz"
-spec:
-  capacity:
-    storage: 500Gi
-  volumeMode: Filesystem
-  accessModes:
-  - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: local-path
-  local:
-    path: /mnt/k8s/nextcloud/storage
-  nodeAffinity:
-    required:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: kubernetes.io/os
-            operator: In
-            values:
-            - linux
----
-apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgresql-pvc
+  name: nextcloud-db-pvc
   namespace: "nextcloud-dmz"
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
+  storageClassName: longhorn
+  volumeName: nextcloud-db
   resources:
     requests:
       storage: 2Gi
@@ -91,22 +20,8 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
-  volumeName: nextcloud-data
+  storageClassName: longhorn
+  volumeName: nextcloud-app
   resources:
     requests:
-      storage: 5Gi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: nextcloud-storage-pvc
-  namespace: "nextcloud-dmz"
-spec:
-  accessModes:
-    - ReadWriteMany
-  storageClassName: local-path
-  volumeName: nextcloud-storage
-  resources:
-    requests:
-      storage: 500Gi
+      storage: 2Gi
