--- a/k8s/arr/ingress.yaml
+++ b/k8s/arr/ingress.yaml
@@ -16,6 +16,16 @@ spec:
                 name: sonarr
                 port:
                   number: 8989
+    - host: tv.korys.lan
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: sonarr
+                port:
+                  number: 8989
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -26,6 +36,16 @@ spec:
   ingressClassName: nginx
   rules:
     - host: radarr.local.koryalbert.net
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: radarr
+                port:
+                  number: 7878
+    - host: movies.korys.lan
       http:
         paths:
           - path: /
@@ -83,6 +103,16 @@ spec:
   ingressClassName: nginx
   rules:
     - host: jellyseerr.local.koryalbert.net
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: jellyseerr
+                port:
+                  number: 5055
+    - host: media.korys.lan
       http:
         paths:
           - path: /
