--- a/k8s/jenkins/deployment.yaml
+++ b/k8s/jenkins/deployment.yaml
@@ -54,4 +54,4 @@ spec:
       volumes:
         - name: jenkins-data
           persistentVolumeClaim:
-              claimName: jenkins-data-pvc
+              claimName: jenkins-app-pvc
