--- a/k8s/jenkins/ingress.yaml
+++ b/k8s/jenkins/ingress.yaml
@@ -3,9 +3,9 @@ kind: Ingress
 metadata:
   name: jenkins
   namespace: jenkins
-  annotations:
-    kubernetes.io/ingress.className: traefik
+
 spec:
+  ingressClassName: nginx
   rules:
   - host: jenkins.local.koryalbert.net
     http:
