--- a/k8s/jenkins/pvc.yaml
+++ b/k8s/jenkins/pvc.yaml
@@ -1,37 +1,13 @@
 apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: jenkins-data
-  namespace: jenkins
-spec:
-  capacity:
-    storage: 2Gi
-  volumeMode: Filesystem
-  accessModes:
-  - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: local-path
-  local:
-    path: /mnt/k8s/jenkins/app
-  nodeAffinity:
-    required:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: kubernetes.io/os
-            operator: In
-            values:
-            - linux
----
-apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jenkins-data-pvc
+  name: jenkins-app-pvc
   namespace: jenkins
 spec:
   accessModes:
-    - ReadWriteOnce
-  storageClassName: local-path
-  volumeName: jenkins-data
+    - ReadWriteMany
+  storageClassName: longhorn
+  volumeName: jenkins-app
   resources:
     requests:
-      storage: 2Gi
+      storage: 700Mi
