--- a/k8s/gasbuddy-scraper/cronjob.yaml
+++ b/k8s/gasbuddy-scraper/cronjob.yaml
@@ -2,6 +2,8 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: gasbuddy-scraper
+  labels:
+    app.kubernetes.io/instance: gasbuddy-scrapper
 spec:
   schedule: "00 */6 * * *"
   jobTemplate:
@@ -10,7 +12,7 @@ spec:
         spec:
           containers:
           - name: gasbuddy-scraper
-            image: public.ecr.aws/b7c8g1g5/linuxeclipsed/gasbuddy-scraper:latest
+            image: public.ecr.aws/b7c8g1g5/linuxeclipsed/gasbuddy-scraper:2025.1.29
             env:
             - name: INFLUXDB_TOKEN
               valueFrom:
