--- a/k8s/arr/deployment.yaml
+++ b/k8s/arr/deployment.yaml
@@ -298,3 +298,45 @@ spec:
         persistentVolumeClaim:
           claimName: jellyseerr-data-pvc
       restartPolicy: Always
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: audiobookshelf
+  namespace: arr
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: audiobookshelf
+  template:
+    metadata:
+      labels:
+        app: audiobookshelf
+    spec:
+      containers:
+        - name: audiobookshelf
+          image: ghcr.io/advplyr/audiobookshelf:latest
+          ports:
+            - containerPort: 80
+          env:
+            - name: TZ
+              value: "America/Los_angeles"
+          volumeMounts:
+            - name: audiobooks
+              mountPath: /audiobooks
+            - name: config
+              mountPath: /config
+            - name: metadata
+              mountPath: /metadata
+      volumes:
+        - name: audiobooks
+          nfs:
+            server: 192.168.2.252
+            path: "/mnt/tank/ngs/Temp/Books"
+        - name: config
+          persistentVolumeClaim:
+            claimName: audiobookshelf-config-pvc
+        - name: metadata
+          persistentVolumeClaim:
+            claimName: audiobookshelf-metadata-pvc
