--- a/k8s/arr/ingress.yaml
+++ b/k8s/arr/ingress.yaml
@@ -122,3 +122,22 @@ spec:
                 name: jellyseerr
                 port:
                   number: 5055
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: audiobookshelf
+  namespace: arr
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: audiobookshelf.local.koryalbert.net
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: audiobookshelf
+                port:
+                  number: 80
