--- a/k8s/arr/pvc.yaml
+++ b/k8s/arr/pvc.yaml
@@ -79,6 +79,20 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: readarr-config-pvc
+  namespace: arr
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 300Mi
+  storageClassName: longhorn
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: audiobookshelf-metadata-pvc
   namespace: arr
 spec:
