--- a/k8s/arr/ingress.yaml
+++ b/k8s/arr/ingress.yaml
@@ -131,7 +131,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: books.local.koryalbert.net
+    - host: readarr.local.koryalbert.net
       http:
         paths:
           - path: /
