--- a/k8s/arr/deployment.yaml
+++ b/k8s/arr/deployment.yaml
@@ -387,3 +387,46 @@ spec:
         - name: metadata
           persistentVolumeClaim:
             claimName: audiobookshelf-metadata-pvc
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: bazarr
+  namespace: arr
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: bazarr
+  template:
+    metadata:
+      labels:
+        app: bazarr
+    spec:
+      containers:
+        - name: bazarr
+          image: lscr.io/linuxserver/bazarr:latest
+          ports:
+            - containerPort: 6767
+          env:
+            - name: TZ
+              value: "America/Los_angeles"
+          volumeMounts:
+            - name: movies
+              mountPath: /movies
+            - name: config
+              mountPath: /config
+            - name: tv
+              mountPath: /tv
+      volumes:
+        - name: movies
+          nfs:
+            server: 192.168.2.252
+            path: "/mnt/tank/nfs/Temp/Movies"
+        - name: config
+          persistentVolumeClaim:
+            claimName: bazarr-config-pvc
+        - name: tv
+          nfs:
+            server: 192.168.2.252
+            path: "/mnt/tank/nfs/Temp/Tv"
