--- a/k8s/arr/pvc.yaml
+++ b/k8s/arr/pvc.yaml
@@ -89,7 +89,6 @@ spec:
     requests:
       storage: 300Mi
   storageClassName: longhorn
-
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -102,4 +101,17 @@ spec:
   resources:
     requests:
       storage: 500Mi
+  storageClassName: longhorn
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: bazarr-config-pvc
+  namespace: arr
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 1Gi
   storageClassName: longhorn
