--- a/k8s/arr/deployment.yaml
+++ b/k8s/arr/deployment.yaml
@@ -440,6 +440,10 @@ spec:
           periodSeconds: 10
           timeoutSeconds: 5
           failureThreshold: 3
+        resources:
+          requests:
+            memory: "210Mi"
+            cpu: "100m"
       volumes:
         - name: movies
           nfs:
