--- a/k8s/auburntech/ingress.yaml
+++ b/k8s/auburntech/ingress.yaml
@@ -17,3 +17,13 @@ spec:
                 name: auburntech
                 port:
                   number: 8080
+  - host: www.auburntechconsulting.com
+    http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: auburntech
+                port:
+                  number: 8080
