--- a/k8s/argocd/ingress.yaml
+++ b/k8s/argocd/ingress.yaml
@@ -7,8 +7,13 @@ metadata:
       nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
       nginx.ingress.kubernetes.io/ssl-passthrough: "true"
       nginx.ingress.kubernetes.io/rewrite-target: /
+      cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   ingressClassName: nginx
+  tls:
+  - hosts:
+      - argocd.local.koryalbert.net
+    secretName: koryalbert-tls
   rules:
     - host: argocd.local.koryalbert.net
       http:
