--- a/k8s/k8sprom-node-exporter/ingress.yaml
+++ b/k8s/k8sprom-node-exporter/ingress.yaml
@@ -3,8 +3,14 @@ kind: Ingress
 metadata:
   name: k8s-prometheus
   namespace: kube-prometheus-stack
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   ingressClassName: nginx
+  tls:
+  - hosts:
+      - k8s-prometheus.local.koryalbert.net
+    secretName: koryalbert-tls
   rules:
   - host: k8s-prometheus.local.koryalbert.net
     http:
