--- a/k8s/codeprojectai/deployment.yaml
+++ b/k8s/codeprojectai/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: codeproject-ai
-  namespace: dvr
+  namespace: codeprojectai
   labels:
     app: codeproject-ai
 spec:
@@ -15,6 +15,19 @@ spec:
       labels:
         app: codeproject-ai
     spec:
+      tolerations:
+      - key: "nvidia.com/gpu"
+        operator: "Equal"
+        value: "true"
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: gpu
+                operator: In
+                values:
+                  - "true"
       containers:
       - name: codeproject-ai
         image: codeproject/ai-server:gpu
