--- a/k8s/codeprojectai/service.yaml
+++ b/k8s/codeprojectai/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: codeproject-ai
-  namespace: dvr
+  namespace: codeprojectai
 spec:
   type: ClusterIP
   selector:
