--- a/k8s/cert-manager/clusterissuer.yaml
+++ b/k8s/cert-manager/clusterissuer.yaml
@@ -9,21 +9,27 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-staging
     solvers:
-    - http01:
-        ingress:
-          class: traefik
+    - dns01:
+        cloudflare:
+          email: kalbert1991@gmail.com
+          apiTokenSecretRef:
+            name: cloudflare-api-token-secret
+            key: api-token
 ---
-#apiVersion: cert-manager.io/v1
-#kind: ClusterIssuer
-#metadata:
-#  name: letsencrypt-prod
-#spec:
-#  acme:
-#    server: https://acme-production-v02.api.letsencrypt.org/directory
-#    email: kalbert1991@gmail.com
-#    privateKeySecretRef:
-#      name: letsencrypt-prod
-#    solvers:
-#    - http01:
-#        ingress:
-#          class: traefik
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-prod
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory
+    email: kalbert1991@gmail.com
+    privateKeySecretRef:
+      name: letsencrypt-prod
+    solvers:
+    - dns01:
+        cloudflare:
+          email: kalbert1991@gmail.com
+          apiTokenSecretRef:
+            name: cloudflare-api-token-secret
+            key: api-token
